// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaderboard Item should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardItem
    coins={1}
    isCurrentUser={false}
    name="test"
    rank={1}
    sortBy="coins"
    steps={5}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(244,237,140)",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "height": 96,
            "marginHorizontal": 30,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingLeft": 20,
              "width": 64,
            }
          }
        >
          <View>
            <Image
              source={1}
              style={
                Object {
                  "height": 28,
                  "width": 28,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
              }
            }
          >
            test
          </YuText>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
              "width": 160,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              }
            }
          >
            1
          </YuText>
        </View>
      </View>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": 96,
        "justifyContent": "center",
        "paddingHorizontal": 30,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              }
            }
          >
            <View>
              <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />
            </View>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>
          </View>,
          <View
            style={
              Object {
                "paddingRight": 20,
                "width": 160,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              1
            </YuText>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(244,237,140)",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 96,
          "marginHorizontal": 30,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View>
              <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />
            </View>,
            "style": Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingLeft": 20,
              "width": 64,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
                "style": Object {
                  "height": 28,
                  "width": 28,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>,
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              1
            </YuText>,
            "style": Object {
              "paddingRight": 20,
              "width": 160,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "1",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              },
            },
            "ref": null,
            "rendered": "1",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(244,237,140)",
              "borderBottomWidth": 0.5,
              "flexDirection": "row",
              "height": 96,
              "marginHorizontal": 30,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              }
            }
          >
            <View>
              <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>
          </View>
          <View
            style={
              Object {
                "paddingRight": 20,
                "width": 160,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              1
            </YuText>
          </View>
        </View>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "height": 96,
          "justifyContent": "center",
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "paddingLeft": 20,
                  "width": 64,
                }
              }
            >
              <View>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 28,
                      "width": 28,
                    }
                  }
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingLeft": 20,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                test
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "paddingRight": 20,
                  "width": 160,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                1
              </YuText>
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(244,237,140)",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "height": 96,
            "marginHorizontal": 30,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 28,
                      "width": 28,
                    }
                  }
                />
              </View>,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source={1}
                  style={
                    Object {
                      "height": 28,
                      "width": 28,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": 1,
                  "style": Object {
                    "height": 28,
                    "width": 28,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                test
              </YuText>,
              "style": Object {
                "flex": 1,
                "paddingLeft": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "test",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                1
              </YuText>,
              "style": Object {
                "paddingRight": 20,
                "width": 160,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "1",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                },
              },
              "ref": null,
              "rendered": "1",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard Item should render only rank text instead of image 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardItem
    coins={1}
    isCurrentUser={false}
    name="test"
    rank={4}
    sortBy="coins"
    steps={5}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(244,237,140)",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "height": 96,
            "marginHorizontal": 30,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingLeft": 20,
              "width": 64,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              }
            }
          >
            4
          </YuText>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
              }
            }
          >
            test
          </YuText>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
              "width": 160,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              }
            }
          >
            1
          </YuText>
        </View>
      </View>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": 96,
        "justifyContent": "center",
        "paddingHorizontal": 30,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              4
            </YuText>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>
          </View>,
          <View
            style={
              Object {
                "paddingRight": 20,
                "width": 160,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              1
            </YuText>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(244,237,140)",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 96,
          "marginHorizontal": 30,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              4
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingLeft": 20,
              "width": 64,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 4,
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              },
            },
            "ref": null,
            "rendered": 4,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>,
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              1
            </YuText>,
            "style": Object {
              "paddingRight": 20,
              "width": 160,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "1",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              },
            },
            "ref": null,
            "rendered": "1",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(244,237,140)",
              "borderBottomWidth": 0.5,
              "flexDirection": "row",
              "height": 96,
              "marginHorizontal": 30,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              4
            </YuText>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>
          </View>
          <View
            style={
              Object {
                "paddingRight": 20,
                "width": 160,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              1
            </YuText>
          </View>
        </View>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "height": 96,
          "justifyContent": "center",
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "paddingLeft": 20,
                  "width": 64,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                4
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingLeft": 20,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                test
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "paddingRight": 20,
                  "width": 160,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                1
              </YuText>
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(244,237,140)",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "height": 96,
            "marginHorizontal": 30,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                4
              </YuText>,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 4,
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                },
              },
              "ref": null,
              "rendered": 4,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                test
              </YuText>,
              "style": Object {
                "flex": 1,
                "paddingLeft": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "test",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                1
              </YuText>,
              "style": Object {
                "paddingRight": 20,
                "width": 160,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "1",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                },
              },
              "ref": null,
              "rendered": "1",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard Item should show steps instead of yucoin 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardItem
    coins={1}
    isCurrentUser={false}
    name="test"
    rank={1}
    sortBy="steps"
    steps={5}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(244,237,140)",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "height": 96,
            "marginHorizontal": 30,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingLeft": 20,
              "width": 64,
            }
          }
        >
          <View>
            <Image
              source={1}
              style={
                Object {
                  "height": 28,
                  "width": 28,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
              }
            }
          >
            test
          </YuText>
        </View>
        <View
          style={
            Object {
              "paddingRight": 20,
              "width": 160,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              }
            }
          >
            5
          </YuText>
        </View>
      </View>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": 96,
        "justifyContent": "center",
        "paddingHorizontal": 30,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              }
            }
          >
            <View>
              <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />
            </View>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>
          </View>,
          <View
            style={
              Object {
                "paddingRight": 20,
                "width": 160,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              5
            </YuText>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(244,237,140)",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 96,
          "marginHorizontal": 30,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View>
              <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />
            </View>,
            "style": Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingLeft": 20,
              "width": 64,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
                "style": Object {
                  "height": 28,
                  "width": 28,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>,
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              5
            </YuText>,
            "style": Object {
              "paddingRight": 20,
              "width": 160,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "5",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 40,
                "textAlign": "right",
              },
            },
            "ref": null,
            "rendered": "5",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(244,237,140)",
              "borderBottomWidth": 0.5,
              "flexDirection": "row",
              "height": 96,
              "marginHorizontal": 30,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              }
            }
          >
            <View>
              <Image
                source={1}
                style={
                  Object {
                    "height": 28,
                    "width": 28,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              test
            </YuText>
          </View>
          <View
            style={
              Object {
                "paddingRight": 20,
                "width": 160,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                }
              }
            >
              5
            </YuText>
          </View>
        </View>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "height": 96,
          "justifyContent": "center",
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "paddingLeft": 20,
                  "width": 64,
                }
              }
            >
              <View>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 28,
                      "width": 28,
                    }
                  }
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingLeft": 20,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                test
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "paddingRight": 20,
                  "width": 160,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                5
              </YuText>
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(244,237,140)",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "height": 96,
            "marginHorizontal": 30,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 28,
                      "width": 28,
                    }
                  }
                />
              </View>,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingLeft": 20,
                "width": 64,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source={1}
                  style={
                    Object {
                      "height": 28,
                      "width": 28,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": 1,
                  "style": Object {
                    "height": 28,
                    "width": 28,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                test
              </YuText>,
              "style": Object {
                "flex": 1,
                "paddingLeft": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "test",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 40,
                    "textAlign": "right",
                  }
                }
              >
                5
              </YuText>,
              "style": Object {
                "paddingRight": 20,
                "width": 160,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "5",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 40,
                  "textAlign": "right",
                },
              },
              "ref": null,
              "rendered": "5",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
